--- a/login.css
+++ b/login.css
@@ -5,10 +5,12 @@
     box-sizing: border-box;
     text-decoration: none;
 }
+
 .container{
     width: 100%;
     height: 100vh;
-    background-color: #d0d0d0;
+    background-image: url(./img/juani.JPG);
+    
     display: flex;
     align-items: center;
     justify-content:center;
@@ -16,7 +18,7 @@
 .form-content{
     width: 100%;
     max-width: 450px;
-    background-color: #2c2f35;
+    background-color: beige;
     padding: 50px 60px 70px;
     text-align: center;
     border-radius: 25px;
@@ -24,7 +26,7 @@
 .form-content h1{
     font-size: 30px;
     margin-bottom: 60px;
-    color: #ffffff;
+    color: #000;
     position: relative;
 }
 .form-content h1::after{
@@ -32,14 +34,17 @@
     width: 30px;
     height: 4px;
     border-radius: 3px;
-    background: #04bd7d;
+    background: rgb(109, 109, 95);
     position: relative;
     bottom: -12px;
     left: 50%;
     transform: translateX(-50%);
 }
 .input-field{
-    background-color: #515966;
+    background-color: beige;
+    border:solid;
+    border-width: 1px;
+    border-color:#000;
     margin: 15px 0;
     border-radius: 3px;
     display: flex;
@@ -53,17 +58,17 @@ input{
     border: 0;
     outline: none;
     padding: 18px 15px;
-    color: #ffffff;
+    color: black;
 }
 input:placeholder {
-    color: #ffffff;
+    color: black;
 }
 .input-field i{
     margin-left: 15px;
     color: #04bd7d;
 }
 form p{
-    color: #ffffff;
+    color: black;
     text-align: left;
     font-size: 13px;
 }
