--- a/style.css
+++ b/style.css
@@ -1,44 +1,173 @@
 body{
-    margin: 0px;
+  margin: 0;
+  background-color: #fff;
+}
+.logo{
+  height: 70px;
+}
+.menu{
+  background-color: #f5f5dc;
+  color: #000000;
+  height: 100px;
+}
+
+.menu__container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
+  max-width: 1200px;
+  height: 100%;
+  margin: 0 auto;
+}
+
+.menu__links{
+  height: 100%;
+  transition: transform .5s;
+  display: flex;
+}
+
+.menu__item{
+  list-style: none;
+  position: relative;
+  height: 100%;
+  --clip: polygon(0 0, 100% 0, 100% 0, 0 0);
+  --transform: rotate(-90deg);
+}
+
+.menu__item:hover{
+  --clip: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+  --transform: rotate(0);
+}
+
+.menu__link{
+  color: #000000;
+  text-decoration: none;
+  padding: 0 30px;
+  display: flex;
+  height: 100%;
+  align-items: center;
+}
+
+.menu__link:hover{
+  background-color: #f8eebb;
+}
+
+
+.menu__arrow{
+  transform: var(--transform);
+  transition: transform .3s;
+  display: block;
+  margin-left: 3px;
+}
+
+.menu__nesting{
+  list-style: none;
+  transition:clip-path .3s;
+  clip-path: var(--clip);
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: max-content;
+  transform: translateY(100%);
+  background-color: #f3f3a4;
+}
+
+.menu__link--inside{
+  padding: 30px 100px 30px 20px;
+}
+
+.menu__link--inside:hover{
+  background-color: #fff;
+}
+
+.menu__hamburguer{
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0 15px;
+  cursor: pointer;
+  display: none;
+}
+
+.menu__img{
+  display: block;
+  width: 36px;
+}
+
+@media (max-width:800px){
+  .menu__hamburguer{
+      display: flex;
   }
-  header{
-    margin: 0px;
-    display: flex;
-    justify-content: space-between;
-    height: 90px;
-    background-color: beige;
-    align-items: center;
-    width: 100%;
-    
+
+  .menu__item{
+      --clip:0;
+      overflow:hidden ;
   }
-  
-  header a {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: black;
+
+  .menu__item--active{
+      --transform: rotate(0);
+      --background: #ffff;
   }
-  header img{
-    height: 70px;
-    margin: 0px;
-    padding-left: 30px;
+
+  .menu__item--show{
+      background-color: var(--background);
   }
-  nav a{
-    font-weight: 600;
-    padding-right: 10px;
-    margin: 20px;
-  
+
+
+  .menu__links{
+      position: fixed;
+      max-width: 400px;
+      width: 100%;
+      top: 70px;
+      bottom: 0;
+      right: 0;
+      background-color: #f5f5dc;
+      overflow-y: auto;
+      display: grid;
+      grid-auto-rows: max-content;
+      transform: translateX(100%);
   }
-  header nav{
-    display: flex;
+
+  .menu__links--show{
+      transform: unset;
+      width: 100%;
   }
-  
+
+  .menu__link{
+      padding: 25px 0;
+      padding-left: 30px;
+      height: auto;
+  }
+
+  .menu__arrow{
+      margin-left: auto;
+      margin-right: 20px;
+  }
+
+  .menu__nesting{
+      display: grid;
+      position: unset;
+      width: 100%;
+      transform: translateY(0);
+      height: 0;
+      transition: height .3s;
+  }
+
+  .menu__link--inside{
+      width: 90%;
+      margin-left: auto;
+      border-left: 1px solid #798499;
+  }
+}
+
   .div1{
+    background-attachment: fixed;
     overflow: hidden;
     background-image: url("./img/portada.png"); /* background imagen como primera impresion*/
     background-size: cover;
     background-position: center;
-    height: 700px;
+    height: 1000px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end; /* Alinea los elementos al final del eje principal */
@@ -54,7 +183,7 @@ body{
   }
   .p1{
     width: 50%;
-    font-size: 18px;
+    font-size: 25px;
     color: white;
   }
   
@@ -84,6 +213,7 @@ body{
   .div2 {
     display: flex;
     background-color: rgb(131, 131, 131);
+    flex-wrap: wrap; /* Permite que los elementos se envuelvan en filas cuando no haya suficiente espacio */
   }
   
   .text {
@@ -92,15 +222,27 @@ body{
     font-weight: 300;
     color: white;
     flex: 1;
-    flex-direction: column; /* Apila los elementos verticalmente */
-    padding-right: 20px; /* Agrega espacio a la derecha para separar la imagen */
-    margin: 40px;
-    padding-left: 60px;
-    font-size: 18px;
+    padding: 20px; /* Ajustamos el padding para simplificar */
+    font-size: 25px;
+    box-sizing: border-box; /* Asegura que el padding no incremente el tamaño total */
   }
-  .highlight-text{
+  
+  .highlight-text {
     background-color: rgba(0, 255, 204, 0.399);
   }
+  
+  @media (min-width: 768px) {
+    .text {
+      padding-right: 40px;
+      padding-left: 30px;
+      font-size: 25px;
+    }
+    
+    .h3{
+      width: 100%;
+    }
+  }
+  
   h3{
     font-size: 45px;
     font-family: 'proxima-nova', sans-serif;
@@ -111,7 +253,7 @@ body{
   
   .imagen1 img {
     max-width: 100%;
-    height: 500px;
+    height: 700px;
     margin: 20px;
   }
   
@@ -125,7 +267,7 @@ body{
   }
   .div3{
     width: 100%;
-    background-color: rgb(209, 207, 207);
+    background-color: beige;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -136,17 +278,7 @@ body{
     font-size: 20px;
     margin: 0px;
   }
-  .cuadritos-conteiner {
-    margin-top: 0px;
-    width: 100%;
-    background-color: rgb(209, 207, 207);
-    display: grid; /* Cambiado a grid */
-    grid-template-columns: repeat(4, 1fr); /* Cuatro columnas */
-    grid-template-rows: auto auto; /* Filas automáticas */
-    gap: 10px; /* Espacio entre las filas y columnas */
-    text-align: center;
-    font-size: 27px;
-  }
+ 
   .cuadrito {
     align-items: center;
     justify-items: center;
@@ -155,23 +287,89 @@ body{
     font-style: normal;
     padding-top: 50px;
   }
-  .cuadritos-conteiner ol {
-    font-size: 16px; /* Cambia el tamaño del texto para los elementos <ol> */
-    font-family: Arial, sans-serif; /* Cambia la fuente del texto para los elementos <ol> */
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-  }
+  
   .div4 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 750px;
+    background-color: #fff;
+    width: 100%;
+    height: 700px;
     background-image: url(./img/pablononnis.jpg);
-    background-size: cover;
+    background-attachment: fixed;
     background-position: center;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+
+  }
+
+  .sesgobajo{
+    position: absolute;
+    padding-top: 300px;
+    left: 0;
+    border-width: 0 0 35vh 100vw;
+    border-style: solid;
+    border-color: transparent transparent #fff transparent;
+  }
+  .sesgoarriba{
+    position: absolute;
+    padding-bottom: 600px;
+    left: 0;
+    border-width: 35vh 100vw 0 0;
+    border-style: solid;
+    border-color: #fff transparent transparent transparent;
   }
   
+  .contenedor{ 
+    
+    font-family: 'proxima-nova', sans-serif;
+    align-items: center;
+    width: 100%;
+    max-width: 10000px;
+    margin: 0;
+    overflow: hidden;
+    padding: 52px 0;
+  }
+
+  .sobre-nosotros{
+    text-align: center;
+    font-size: 56px;
+    margin-bottom: 10px;
+    font-weight: 600;
+  }
+  .parrafo{
+    padding: 30px;
+    justify-content: center;
+    font-size: 20px;
+    margin-bottom: 13px;
+    font-weight: 300;
+    text-align: center;
+    line-height: 33px;
+    color: #000000;
+  }
+
+  .cuadritos-conteiner{
+    background-color: beige;
+    width: 100%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  .card{
+    margin: 20px 0;
+    width: 30%;
+    height: auto;
+    text-align: center;
+    padding: 20px;
+    box-shadow: 0px 0px 4px 0 gray;
+  }
+  .cuadritos-conteiner img{
+    width: 140px;
+    height: 140px;
+    object-fit: cover;
+    border-radius: 100%;
+  }
   .contacto {
     padding: 12px 24px; /* Ajusta el espaciado interno según sea necesario */
     display: inline-block;
@@ -196,6 +394,12 @@ body{
   }
   .contacto:focus{
     outline:none
+  }
+
+  .acerca-de{
+    margin: 0;
+    background-color: #fff;
+
   }
   @media screen and (max-width: 450px){
     header {
@@ -230,7 +434,7 @@ body{
     .div1{
       max-width: 100%;
       overflow: hidden;
-      background-image: url("./img/Screenshot\ 2024-04-08\ at\ 14.39.44.jpg"); /* background imagen como primera impresion*/
+      background-image: url("./img/portada.png"); /* background imagen como primera impresion*/
       background-size: cover;
       background-position: center;
       height: 700px;
@@ -289,6 +493,7 @@ body{
       color: white;
       padding-right: 20px; /* Agrega espacio a la derecha para separar la imagen */
       font-size: 20px;
+      font-size: 12px;
     }
     
     .highlight-text {
@@ -329,17 +534,7 @@ body{
       margin: 0px;
       align-items: center;
     }
-    .cuadritos-conteiner {
-      margin-top: 0px;
-      width: 100%;
-      background-color: rgb(209, 207, 207);
-      display: grid; /* Cambiado a grid */
-      grid-template-columns: 25% 25% 25% 25%;
-      grid-template-rows: auto auto; /* Filas automáticas */
-      gap: 4px; /* Espacio entre las filas y columnas */
-      text-align: center;
-      font-size: 13px;
-    }
+    
     .cuadrito {
       align-items: center;
       justify-items: center;
@@ -348,13 +543,7 @@ body{
       font-style: normal;
       padding-top: 20px;
     }
-    .cuadritos-conteiner ol {
-      font-size: 0px; /* Cambia el tamaño del texto para los elementos <ol> */
-      font-family: Arial, sans-serif; /* Cambia la fuente del texto para los elementos <ol> */
-      text-align: center;
-      align-items: center;
-      padding-bottom: 12px;
-    }
+    
     .div4 {
       display: flex;
       align-items: center;
